# rust-task-manager

./: .editorconfig  .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SPECIFICATION.md  build.rs  index.html  package-lock.json  package.json  rustfmt.toml  warnings.txt
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
benches/: allocation.rs  filtering.rs  monitoring.rs  pgo_workload.rs  startup.rs  stress_test.rs
examples/: minimal_window.rs
specs/001-build-a-modern/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-modern/checklists/: requirements.md
specs/001-build-a-modern/contracts/: tauri-commands.md
specs/001-native-task-manager/: ANALYSIS-REMEDIATION-TASKS.md  ARCHITECTURE-CLARIFICATION.md  CRITICAL-FIXES.md  README.md  plan.md  spec.md  tasks.md
specs/001-native-task-manager/benchmarks/: README.md  methodology-part1.md  methodology-part2.md
specs/001-native-task-manager/checklists/: README.md  compatibility.md  native-code.md  performance.md  requirements.md  security.md  ux.md  windows-integration.md
specs/001-native-task-manager/design/: README.md  interaction-specification.md  ui-specification.md
specs/001-native-task-manager/research/: README.md  research.md  windows-api-research.md
src/: lib.rs  main.rs  main.ts  style.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: mod.rs  performance.rs  process_ops.rs  processes.rs  system_info.rs
src-tauri/src/models/: mod.rs  performance.rs  preferences.rs  process.rs  system.rs
src-tauri/src/services/: mod.rs  process_manager.rs  system_monitor.rs
src-tauri/src/utils/: mod.rs  windows.rs
src/app/: config.rs  export.rs  mod.rs  state.rs  theme.rs  updater.rs
src/components/: ConfirmDialog.ts  PerformanceMetrics.ts  ProcessList.ts  SystemInfo.ts
src/core/: filter.rs  metrics.rs  mod.rs  process.rs  system.rs
src/services/: performance.ts  systemApi.ts  tauri.ts
src/types/: performance.ts  preferences.ts  process.ts  system.ts
src/ui/: animation.rs  fluent.rs  i18n.rs  input.rs  layout.rs  mod.rs  systemInfo.ts  systray.rs  window.rs
src/ui/accessibility/: mod.rs  uia.rs
src/ui/controls/: button.rs  context_menu.rs  filter_box.rs  graph.rs  heatmap.rs  mod.rs  table.rs  (+2 more)
src/util/: arenas.rs  logging.rs  mod.rs  profiling.rs  strings.rs  time.rs
src/utils/: formatters.ts
src/windows/: mod.rs  version.rs
tests/: integration_tests.rs
tests/integration/: mod.rs  process_control.rs
(+26 files in other folders)
