[package]
name = "rust-task-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <your.email@example.com>"]
description = "Ultra-fast native Windows task manager built with pure Rust"
license = "MIT"
repository = "https://github.com/yourusername/rust-task-manager"

[dependencies]
# Windows APIs
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "UI_Composition",
] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# Memory allocator
mimalloc = { version = "0.1", default-features = false }
bumpalo = "3.14"

# Utilities
static_assertions = "1.1"

[features]
default = ["fluent-ui"]
fluent-ui = []  # Enable Fluent Design materials (Mica/Acrylic)

[build-dependencies]
embed-resource = "2.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bin]]
name = "task-manager"
path = "src/main.rs"

[lib]
name = "task_manager"
path = "src/lib.rs"

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "monitoring"
harness = false
