[package]
name = "rust-task-manager"
version = "0.1.0"
description = "A modern Windows task manager with system monitoring and process management"
authors = ["Your Name"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# System information
sysinfo = "0.32"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Lazy static for global state
once_cell = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
